use List methods isEmpty(), getFirst()